--- a/package.json
+++ b/package.json
@@ -18,21 +18,16 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d data-source.ts",
-
     "migration:generate": "npm run typeorm -- migration:generate src/migrations/initial_schema",
     "migration:create": "npm run typeorm -- migration:create src/migrations/new_migration",
     "migration:run": "npm run typeorm -- migration:run",
-    
     "migration:revert": "npm run typeorm -- migration:revert",
     "seed:dev": "ts-node -r tsconfig-paths/register src/database/seeder.ts",
     "seed:dev:nopaths": "ts-node src/database/seed.ts",
     "seed:watch": "ts-node-dev -r tsconfig-paths/register --respawn src/database/seed.ts",
     "seed": "node dist/database/seed.js",
     "seed:prod": "NODE_ENV=production node dist/database/seed.js",
-
-
     "docker:dev": "docker-compose up --build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
@@ -40,6 +35,7 @@
     "docker:clean": "docker-compose down -v --remove-orphans"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -54,6 +50,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.7.0",
+    "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
