--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # Tu aplicación NestJS
   app:
     build: .
     container_name: api_nest_agro_tic
@@ -9,7 +8,6 @@ services:
     ports:
       - "3000:3000"
     environment:
-      # Variables que la app necesita DENTRO del contenedor
       - DB_HOST=db
       - DB_PORT=5432
       - DB_USERNAME=${DB_USERNAME}
@@ -29,13 +27,11 @@ services:
       redis:
         condition: service_started
     volumes:
-      # Para hot reload - los cambios en tu código se reflejan inmediatamente
-      - .:/app
-      - /app/node_modules
+      - ./:/app                      # bind mount del código
+      - node_modules:/app/node_modules  # volumen nombrado para node_modules
     networks:
       - mi_red
 
-  # Base de datos PostgreSQL
   db:
     image: postgres:15-alpine
     container_name: mi_proyecto_db
@@ -45,7 +41,6 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
     ports:
-      # Puerto externo:interno (5433 para no chocar con Postgres locales)
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -57,7 +52,6 @@ services:
     networks:
       - mi_red
 
-  # Redis
   redis:
     image: redis:7-alpine
     container_name: mi_proyecto_redis
@@ -76,3 +70,4 @@ networks:
 volumes:
   postgres_data:
   redis_data:
+  node_modules:
