--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "migration:create": "npm run typeorm -- migration:create src/migrations/new_migration",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
-    "seed:dev": "ts-node -r tsconfig-paths/register src/database/seeder.ts",
-    "seed:dev:nopaths": "ts-node src/database/seed.ts",
-    "seed:watch": "ts-node-dev -r tsconfig-paths/register --respawn src/database/seed.ts",
-    "seed": "node dist/database/seed.js",
-    "seed:prod": "NODE_ENV=production node dist/database/seed.js",
 
+    "seed": "npm run build && npm run seed:prod",
+    "seed:dev": "ts-node -r tsconfig-paths/register src/seeder/seeder.ts",
+    "seed:watch": "ts-node-dev -r tsconfig-paths/register --respawn src/seeder/seeder.ts",
+    "seed:prod": "NODE_ENV=production node dist/seeder/seeder.js",
+    
   "docker:dev": "docker-compose up --build --remove-orphans",
   "docker:up": "docker-compose up -d --build --remove-orphans",
   "docker:down": "docker-compose down",
