--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 
     "docker:g": "docker-compose exec -it app npm run migration:generate",
     "docker:r": "docker-compose exec -it app npm run migration:run",
+    "docker:seed": "docker-compose exec -it app npm run seed:dev",
     
     "seed:dev": "ts-node -r tsconfig-paths/register src/seeder/seeder.ts",
     "seed:watch": "ts-node-dev -r tsconfig-paths/register --respawn src/seeder/seeder.ts",
