--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "exceljs": "^4.4.0",
     "ioredis": "^5.7.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
