--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
 DB_USERNAME=myuser
 DB_PASSWORD=mypassword
 DB_DATABASE=mydatabase
@@ -11,6 +13,10 @@ JWT_REFRESH_EXPIRATION_TIME=30d
 
 # Application
 NODE_ENV=development
+PORT=3000
+
+# CORS Configuration
+FRONTEND_URL=http://localhost:5173
 
 
 
