--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,11 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      mosquitto:
+        condition: service_started
     volumes:
-      - ./:/app                      # bind mount del código
-      - node_modules:/app/node_modules  # volumen nombrado para node_modules
+      - ./:/app
+      - node_modules:/app/node_modules
     networks:
       - mi_red
 
@@ -69,6 +71,20 @@ services:
       - "8080:8080"
     depends_on:
       - db
+    networks:
+      - mi_red
+
+  mosquitto:
+    image: eclipse-mosquitto:2
+    container_name: mi_proyecto_mosquitto
+    restart: unless-stopped
+    ports:
+      - "1883:1883"   # Puerto MQTT estándar
+      - "9001:9001"   # Puerto WebSocket
+    volumes:
+      - ./mosquitto/config:/mosquitto/config
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
     networks:
       - mi_red
 
