--- a/package.json
+++ b/package.json
@@ -49,16 +49,17 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/platform-socket.io": "^11.1.6",
+    "@nestjs/platform-socket.io": "^11.1.7",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
-    "@nestjs/websockets": "^11.1.6",
+    "@nestjs/websockets": "^11.1.7",
     "bcrypt": "^6.0.0",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "ioredis": "^5.7.0",
+    "mqtt": "^5.14.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
